# reasoning_engine

./: .gitignore  Dockerfile  Main.hs  Makefile  README.md  entrypoint.sh  reasoning-engine.cabal
.devcontainer/: Dockerfile  devcontainer.json
ontology-builder/: Dockerfile  build.hs  buildDescOnly.hs  ontology-builder.cabal
