cabal-version:       >=1.10
name:                reasoning-engine
version:             0.1.0.0
build-type:          Simple

executable reasoning-engine
  main-is:             Main.hs
  build-depends:       base >=4.14 && <5,
                       mtl,
                       transformers,
                       hashable,
                       binary,
                       bytestring,
                       unordered-containers,
                       containers,
                       scotty,
                       wai-extra,
                       http-types,
                       aeson,
                       text
  default-language:    Haskell2010
