cabal-version:       >=1.10
name:                ontology-builder
version:             0.1.0.0
build-type:          Simple

executable ontology-builder
  main-is:             build.hs
  build-depends:       base >=4.14 && <5,
                       containers == 0.6.7,
                       bytestring == 0.11.5.4,
                       binary == 0.8.9.1,
                       vector,
                       unordered-containers,
                       text
  default-language:    Haskell2010
